--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -11,4 +11,4 @@ docker:
 	@echo "---- Building Docker image ---- "
 	@$(DOCKER) build -t emkor/audiopyle-ui -f Dockerfile_ui .
 
-.PHONY: all package docker run
+.PHONY: all package docker
