--- a/scripts/docker-compose-ci.yml
+++ b/scripts/docker-compose-ci.yml
@@ -90,5 +90,7 @@ services:
     image: "emkor/audiopyle-testcases:latest"
     hostname: "testcases"
     environment:
-      - COORDINATOR_SERVICE_HOST=api.local
-      - COORDINATOR_SERVICE_PORT=8080
+      - API_SERVICE_HOST=api.local
+      - API_SERVICE_PORT=8080
+      - UI_SERVICE_HOST=ui.local
+      - UI_SERVICE_PORT=8008
