--- a/open_api_docs.yml
+++ b/open_api_docs.yml
@@ -7,11 +7,11 @@ info:
 host: "localhost:8080"
 basePath: "/"
 schemes:
-  - "http"
+- "http"
 consumes:
-  - "application/json"
+- "application/json"
 produces:
-  - "application/json"
+- "application/json"
 definitions:
   ErrorModel:
     type: "object"
@@ -23,11 +23,11 @@ definitions:
   FileDetail:
     type: "object"
     required:
-      - "file_name"
-      - "size"
-      - "created_on"
-      - "last_modification"
-      - "last_access"
+    - "file_name"
+    - "size"
+    - "created_on"
+    - "last_modification"
+    - "last_access"
     properties:
       file_name:
         type: "string"
@@ -49,10 +49,10 @@ definitions:
   VampPlugin:
     type: "object"
     required:
-      - "vendor"
-      - "name"
-      - "output"
-      - "library_file_name"
+    - "vendor"
+    - "name"
+    - "output"
+    - "library_file_name"
     properties:
       vendor:
         type: "string"
@@ -65,12 +65,12 @@ definitions:
   AudioTag:
     type: "object"
     required:
-      - "artist"
-      - "album"
-      - "title"
-      - "genre"
-      - "track"
-      - "date"
+    - "artist"
+    - "album"
+    - "title"
+    - "genre"
+    - "track"
+    - "date"
     properties:
       artist:
         type: "string"
@@ -89,8 +89,8 @@ definitions:
   MetricConfig:
     type: "object"
     required:
-      - "plugin"
-      - "transformation"
+    - "plugin"
+    - "transformation"
     properties:
       plugin:
         type: "string"
@@ -105,8 +105,8 @@ definitions:
   PluginConfig:
     type: "object"
     required:
-      - block_size
-      - step_size
+    - block_size
+    - step_size
     properties:
       block_size:
         type: "integer"
@@ -116,8 +116,8 @@ definitions:
   ExtractionRequest:
     type: "object"
     required:
-      - "audio_file_name"
-      - "plugin_full_key"
+    - "audio_file_name"
+    - "plugin_full_key"
     properties:
       task_id:
         type: "string"
@@ -133,9 +133,9 @@ definitions:
   MetricDefinition:
     type: "object"
     required:
-      - "name"
-      - "plugin"
-      - "transformation"
+    - "name"
+    - "plugin"
+    - "transformation"
     properties:
       name:
         type: "string"
@@ -146,7 +146,7 @@ definitions:
       transformation:
         type: "object"
         required:
-          - "name"
+        - "name"
         properties:
           name:
             type: "string"
@@ -157,14 +157,14 @@ definitions:
   MetricValue:
     type: "object"
     required:
-      - "count"
-      - "maximum"
-      - "mean"
-      - "median"
-      - "minimum"
-      - "standard_deviation"
-      - "sum"
-      - "variance"
+    - "count"
+    - "maximum"
+    - "mean"
+    - "median"
+    - "minimum"
+    - "standard_deviation"
+    - "sum"
+    - "variance"
     properties:
       count:
         type: "integer"
@@ -185,8 +185,8 @@ definitions:
   ExtractionStatus:
     type: "object"
     required:
-      - "task_id"
-      - "status"
+    - "task_id"
+    - "status"
     properties:
       task_id:
         type: "string"
@@ -219,14 +219,14 @@ definitions:
   ExtractionStats:
     type: "object"
     required:
-      - "task_id"
-      - "total_time"
-      - "compression_time"
-      - "data_stats_build_time"
-      - "encode_audio_time"
-      - "extraction_time"
-      - "metrics_extraction_time"
-      - "result_store_time"
+    - "task_id"
+    - "total_time"
+    - "compression_time"
+    - "data_stats_build_time"
+    - "encode_audio_time"
+    - "extraction_time"
+    - "metrics_extraction_time"
+    - "result_store_time"
     properties:
       task_id:
         type: "string"
@@ -280,9 +280,9 @@ paths:
               type: "string"
           examples:
             application/json: [
-                "102bpm_drum_loop.flac",
-                "102bpm_drum_loop.mp3"
-              ]
+              "102bpm_drum_loop.flac",
+              "102bpm_drum_loop.mp3"
+            ]
   /audio/{file_name}:
     get:
       description: "Returns list of available audio file names"
@@ -346,7 +346,7 @@ paths:
             $ref: "#/definitions/ErrorModel"
   /plugin:
     get:
-      description: "Returns list of available VAMP plugins"
+      description: "Returns list of available VAMP plugin full keys"
       responses:
         200:
           description: "List of available VAMP plugins"
@@ -477,7 +477,7 @@ paths:
       description: "Returns plugins for which there's available configuration"
       responses:
         200:
-          description: "Plugin keys list with config defined in JSON file"
+          description: "List of plugin keys with config defined in JSON file"
           schema:
             type: array
             items:
@@ -548,10 +548,10 @@ paths:
     get:
       description: "Returns metric values inserted by finished extractions"
       parameters:
-        - name: name
-          in: path
-          required: true
-          type: "string"
+      - name: name
+        in: path
+        required: true
+        type: "string"
       responses:
         200:
           description: "List of task_ids that extracted metric values for given metric definitions"
@@ -925,11 +925,11 @@ paths:
     get:
       description: "Lists metric definition names that were inserted by given extraction identified by task_id"
       parameters:
-        - name: task_id
-          in: path
-          required: true
-          type: "string"
-          format: "uuid"
+      - name: task_id
+        in: path
+        required: true
+        type: "string"
+        format: "uuid"
       responses:
         200:
           description: "Metric definition names"
@@ -1013,12 +1013,12 @@ paths:
               $ref: "#/definitions/ExtractionRequest"
           examples:
             application/json: [{
-               "audio_file_name": "102bpm_drum_loop.flac",
-               "metric_config": null,
-               "plugin_config": null,
-               "plugin_full_key": "vamp-example-plugins:spectralcentroid:logcentroid",
-               "uuid": "0b04c1b3-b366-5145-9248-6cb118d3be99"
-            }]
+                                 "audio_file_name": "102bpm_drum_loop.flac",
+                                 "metric_config": null,
+                                 "plugin_config": null,
+                                 "plugin_full_key": "vamp-example-plugins:spectralcentroid:logcentroid",
+                                 "uuid": "0b04c1b3-b366-5145-9248-6cb118d3be99"
+                               }]
         412:
           description: "Audio files directory or VAMP plugins directory is empty; could not generate requests"
           schema:
