refactoring makefiles, correcting base dockerfile image

--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -1,9 +1,9 @@
-all: package docker
+all: build docker
 
 NPM = npm
 DOCKER = docker
 
-package:
+build:
 	@echo "---- Building NPM package ---- "
 	@$(NPM) install
 
@@ -11,4 +11,8 @@ docker:
 	@echo "---- Building Docker image ---- "
 	@$(DOCKER) build -t emkor/audiopyle-ui -f Dockerfile_ui .
 
-.PHONY: all package docker
+cleanup:
+	@echo "---- Doing cleanup ---- "
+	@rm -rf ./node_modules
+
+.PHONY: all build docker cleanup
