--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,7 +1,7 @@
-all: test package
+all: test build
 
-PYTHON3 = ~/.venv/audiopyle/bin/python
-SPECTACLE = spectacle
+PY3 = python3
+VENV_PY3 = ~/.venv/audiopyle/bin/python3
 
 config:
 	@echo "---- Doing cleanup ----"
@@ -9,23 +9,30 @@ config:
 	@rm -rf ~/.venv/audiopyle
 	@echo "---- Setting virtualenv ----"
 	@rm -rf ~/.venv/audiopyle
-	python3 -m venv ~/.venv/audiopyle
+	@$(PY3) -m venv ~/.venv/audiopyle
 	@echo "---- Installing build dependencies ----"
-	@$(PYTHON3) -m pip install wheel mypy pytest pytest-cov assertpy
-	@echo "---- Installing app dependencies ----"
-	@$(PYTHON3) -m pip install numpy
-	@$(PYTHON3) -m pip install vamp
-	@echo "---- Installing app in editable mode ----"
-	@$(PYTHON3) -m pip install -e .
+	@$(VENV_PY3) -m pip install wheel mypy pytest pytest-cov assertpy
+	@echo "---- Installing app dependencies and app itself in editable mode ----"
+	@$(VENV_PY3) -m pip install numpy
+	@$(VENV_PY3) -m pip install vamp
+	@$(VENV_PY3) -m pip install -e .
 
 test:
 	@echo "---- Running MyPy static code analysis ---- "
-	@$(PYTHON3) -m mypy --ignore-missing-imports .
-	@echo "---- Executing unit tests ----"
-	@$(PYTHON3) -m pytest -v --cov=audiopyle ./audiopyle/test
+	@$(VENV_PY3) -m mypy --ignore-missing-imports .
+	@echo "---- Executing unit tests with coverage ----"
+	@$(VENV_PY3) -m pytest -v --cov=audiopyle ./audiopyle/test
 
-package:
+build:
 	@echo "---- Building python wheel package ---- "
-	@$(PYTHON3) setup.py bdist_wheel --python-tag py3 --dist-dir ../scripts
+	@$(VENV_PY3) setup.py bdist_wheel --python-tag py3 --dist-dir ../scripts/
 
-.PHONY: all config test package
+cleanup:
+	@echo "---- Cleaning up ---- "
+	@rm -rf ./.mypy_cache
+	@rm -rf ./.pytest_cache
+	@rm -rf ./.coverage
+	@rm -rf ./build
+	@rm -rf ./audiopyle-*.whl
+
+.PHONY: all config test build cleanup
