--- a/scripts/Dockerfile_base
+++ b/scripts/Dockerfile_base
@@ -16,8 +16,7 @@ RUN mkdir -p ./audio && mkdir -p ./vamp
 
 # INCLUDE SCRIPT (https://github.com/vishnubob/wait-for-it) FOR WAITING FOR OTHER SERVICE UNDER /home/audiopyle
 COPY wait-for-it.sh ./wait-for-it.sh
-RUN chmod u+x wait-for-it.sh
-RUN chown -R audiopyle:audiopyle /home/audiopyle
+RUN chmod u+x wait-for-it.sh && chown -R audiopyle:audiopyle /home/audiopyle
 USER audiopyle
 RUN python3 -m venv /home/audiopyle/.venv && . /home/audiopyle/.venv/bin/activate && pip install --upgrade pip && pip install --no-cache-dir numpy && pip install --no-cache-dir vamp
 
