--- a/.travis.yml
+++ b/.travis.yml
@@ -1,51 +1,51 @@
-sudo: required
+sudo: true
 language: python
 cache: pip
 python:
-- "3.6"
+  - "3.6"
 
 services:
-- docker
+  - docker
 
 jobs:
   include:
-  - stage: os-deps
-    name: "Setup OS"
-    script:
-    - chmod u+x **/*.sh
-    - sudo apt-get install -y libav-tools
-    - make config
-  - stage: config
-    name: "Setup audiopyle"
-    script: make config
-  - stage: unit-test
-    name: "Run tests"
-    script: make test
-  - stage: build
-    name: "Build backend and frontend packages"
-    script: make build
-  - stage: base-docker
-    name: "Build base docker backend image"
-    script: make basedocker
-  - stage: docker
-    name: "Build audiopyle docker images"
-    script: make docker
-  - stage: integration-test
-    name: "Deploy & run integration tests"
-    script: make verify
-  - stage: publish-images
-    name: "Push Docker images with audiopyle"
-    script: scripts/push_images.sh $DOCKER_USERNAME $DOCKER_PASSWORD
+    - stage: os_deps
+      name: "Setup OS"
+      script:
+      - chmod u+x **/*.sh
+      - sudo apt-get install -y libav-tools
+      - make config
+    - stage: config
+      name: "Setup audiopyle"
+      script: make config
+    - stage: unit_test
+      name: "Run tests"
+      script: make test
+    - stage: build
+      name: "Build backend and frontend packages"
+      script: make build
+    - stage: base_docker
+      name: "Build base docker backend image"
+      script: make basedocker
+    - stage: docker
+      name: "Build audiopyle docker images"
+      script: make docker
+    - stage: integration-test
+      name: "Deploy & run integration tests"
+      script: make verify
+    - stage: publish_images
+      name: "Push Docker images with audiopyle"
+      script: scripts/push_images.sh $DOCKER_USERNAME $DOCKER_PASSWORD
 
 stages:
-- os-deps
+- os_deps
 - config
-- unit-test
+- unit_test
 - build
-- base-docker
+- base_docker
 - docker
-- integration-test
-- publish-images
+- integration_test
+- publish_images
   if: branch = master
 
 notifications:
