--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/emkor/audiopyle#readme",
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "http-server": "^0.11.1",
+    "jquery": "^3.3.1",
     "vue": "^2.5.17"
   }
 }
