added ability to run Vue app separately, added .tmp directory to gitignore

--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -15,4 +15,8 @@ cleanup:
 	@echo "---- Doing cleanup ---- "
 	@rm -rf ./node_modules
 
-.PHONY: all build docker cleanup
+run:
+	@echo "---- Starting front-end app ---- "
+	@$(NPM) start
+
+.PHONY: all build docker cleanup run
